# WUMP

./: .replit  README.md  main.py  pyproject.toml  replit.nix  requirements.txt
cogs/: __init__.py
cogs/commands/: blacklist.py  block.py  extra.py  giveaway.py  help.py  music.py  np.py  owner.py  owner2.py
cogs/events/: topgg.py
cogs/olympus/: antinuke.py  automod.py  extra.py  fun.py  games.py  general.py  giveaway.py  ignore.py  moderation.py  music.py  server.py  voice.py  welcome.py
db/: afk.db  np.db  prefix.db  stats.db  welcome.db
top-gg/: server.py
utils/: config.py  help.py  paginator.py  paginators.py
